# divar-auction

./: .gitignore  .template.env  Dockerfile  Makefile  README.md  babel.cfg  compose.yml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 55a590a81203_initial.py
auction/: _types.py  api.py  api_deps.py  app.py  auth.py  config.py  divar.py  exception.py  i18n.py  log.py  messages.pot  model.py  repo.py  security.py  service.py
auction/api/: __init__.py  app.py  auth.py  http.py  service.py
auction/core/: config.py  exception.py  i18n.py  security.py
auction/db/: __init__.py  base.py  engine.py
auction/divar/: __init__.py  client.py  client_mock.py  mock_data.py  schemas.py
auction/locales/en/LC_MESSAGES/: messages.po
auction/locales/fa/LC_MESSAGES/: messages.po
auction/pages/: 404.html  auction_bidder.html  auction_intro.html  auction_seller.html  auction_start.html  auctions.html  base.html  error.html  index.html  redirect_with_message.html  start_auction.html  template.py
auction/pages/scripts/: toman_script.html
auction/repo/: __init__.py  base.py  jsonfilerepo.py  sqlarepo.py
auction/static/: styles.css
scripts/: run.sh
tests/: conftest.py  test_auction.py  test_sqlarepo.py
tests/api/: test_auction.py
