[project]
name = "auction"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "kenar>=0.6.0",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[[tool.mypy.overrides]]
module = ["kenar", "kenar.app"]
ignore_errors = true
ignore_missing_imports = true
