[project]
name = "auction"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.16.0",
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.115.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "kenar>=0.6.0",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[[tool.mypy.overrides]]
module = ["kenar", "kenar.app"]
ignore_errors = true
ignore_missing_imports = true

[tool.ruff.lint.isort]
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 1
split-on-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--log-level=DEBUG -v"
